button alignment, input font bugs fixed

--- a/src/home/css/_header.scss
+++ b/src/home/css/_header.scss
@@ -30,12 +30,12 @@
 .nav-item {	
 	height: 47px;
 	margin-left: 3px;
-	width: 132px;
+	//width: 132px;
 	a {
 		border-radius: 23.5px;
 		color: #ffffff;
 		height: 100%;
-		padding: 11px 21px 0 21px;
+		padding: 11px 20px;
 		text-align: center;
 		width: 100%;
 		&.active {
