--- a/src/home/css/home.scss
+++ b/src/home/css/home.scss
@@ -79,7 +79,7 @@ ul.links {
 	p {
 		color: #ffffff;
 		margin: 0;
-		padding: 9px 0 6px 0;
+		padding: 9px 0;
 		text-align: center;
 	}
 }
@@ -134,6 +134,7 @@ ul.links {
 				border: solid 1px #c6c6c6;
 				border-radius: 100px;
 				box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+				font-family: circular-std-book, sans-serif;
 				font-size: 24px;
 				outline: none;
 				padding: 18px 0 17px 30px;
